--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   color: #444;
   font-size: 100%;
   font-family: 'Nanum Gothic', sans-serif;
+  min-width: 1200px; /* 배경 잘림 방지 */
 }
 .img_responsive{ width: 100%;}
 
@@ -122,9 +123,28 @@ body {
 }
 
 /* 메인배너 */
+#main_banner { 
+  position: relative;
+  height: 400px;
+  overflow: hidden;
+}
+/* 배경 높이값 고정 & 위치 중앙 고정 */
+#main_banner .inner{
+  width: 1920px; height: 400px;
+  position: absolute;
+  left: 50%; top: 50%;
+  transform: translate(-50%, -50%);
+  outline: 2px solid red;
+}
+
+/* bx slider 테두리 제거 */
 .bx-wrapper{
-  /* bx slider 테두리 제거 */
   border: none !important;
+}
+
+/* 인디케이터 위치 조정 */
+.bx-pager { 
+  bottom: 20px !important;
 }
 
 
