--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,11 @@ body {
 }
 #main_header h1 {
   position: absolute;
-  left: 20px; top: 37px;
+  left: 0px; top: 37px;
 }
 #main_header #util_menu{
   position: absolute;
-  right: 20px; top: 53px;
+  right: 0px; top: 53px;
   font-size: 24px;
 }
 #main_header #util_menu > a {
@@ -82,6 +82,7 @@ body {
 /* 메인 GNB */
 #main_gnb {
   /* background: #ccc; */
+  border-bottom: 1px solid #ccc;
 }
 #main_gnb .container {
   overflow: hidden;
