--- a/css/style.css
+++ b/css/style.css
@@ -168,8 +168,9 @@ body {
   float: left;
   margin-right: 20px;
   padding-bottom: 20px;
+  margin-bottom: 40px;
 }
-#top_seller ul > li:last-child{ 
+#top_seller ul > li:nth-child(5n){ 
   margin-right: 0;
 }
 #top_seller ul > li img {
