--- a/css/style.css
+++ b/css/style.css
@@ -237,8 +237,8 @@ body {
   margin-right: 20px;
   padding-bottom: 20px; 
   background: #efefef;
-  box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
-  border: 1px solid #ddd;
+  /* box-shadow: 0px 0px 8px rgba(0,0,0,0.2); */
+  border: 1px solid #eee;
 }
 #brand ul.brand-slider > li:last-child{ 
   margin-right: 0;
